--- a/question2.html
+++ b/question2.html
@@ -7,7 +7,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1> Question One</h1>
+        <h1> Question Two</h1>
         <h2>What is the name of the biggest technology company in South Korea?<h2>
         <p> <a href="correct2.html"> &bull; Samsung</a> </p>
         <p> <a href="wrong2.html"> &bull; Hancom</a> </p>
