--- a/question3.html
+++ b/question3.html
@@ -7,7 +7,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1> Question One</h1>
+        <h1> Question Three</h1>
         <h2>What is the worlds smallest bird?<h2>
         <p> <a href="wrong3.html"> &bull; Costas Hummingbird </a> </p>
         <p> <a href="correct3.html"> &bull; Bee Hummingbirds</a> </p>
