--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <p>Video of the Week:</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/jR9JBxRJtM8?si=vCy6u8e1mVJ7RfNZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>
-        <a class="quizlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
-        <a class="newslink" href="news.html">  News of the Week 📰 &#10145;&#65039;</a>
+        <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
+        <a class="contentlink" href="news.html">  News of the Week 📰 &#10145;&#65039;</a>
+        <hr class="invisible">
+        <a class="contentlink" href="dinoindex.html"> Simplified Dinosaur Game</a>
     </body>
 </html>
