--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <a class="contentlink" href="news.html">  News of the Week 📰 &#10145;&#65039;</a>
         <hr class="invisible">
         <a class="contentlink" href="dinoindex.html"> Simplified Dinosaur Game</a>
+        <a class="contentlink" href="platformerzip.zip"> My platformer game</a>
     </body>
 </html>
