--- a/correct3.html
+++ b/correct3.html
@@ -10,7 +10,7 @@
         <h1> Correct!</h1>
         <h2>Which of these video game franchises is the oldest?</h2>
         <h1>
-            <a href="index.html">  Back to Home &#10145;&#65039;</a>
+            <a href="weeklyindex.html">  Back to Home &#10145;&#65039;</a>
             </h1>
         <p id="incorrect">GTA V</p>
         <p id="correct">Minecraft</p>
