--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kellen Weekly</title>
+        <title>The Kellen Zone</title>
         <link href="style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,18 +9,15 @@
     </head>
     <body>
         <img id="logo" src="logo.png">
-        <h1>Kellen Weekly</h1>
-        <p id="date"> Updated 11-18-2023</p>
-        <p id="date"> Notes: Updated game coming soon!</p>
-        <hr>
-        <h2>Check out the videos, games, and more! Check back every Saturday for a refreshed catalog of content!</h2>
-        <p>Video of the Week:</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KxnHh3Fl250?si=TgkUcRQvA-huKX1b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <hr>
-        <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
-        <a class="contentlink" href="news.html">  News of the Week 📰 &#10145;&#65039;</a>
+        <h1>The Kellen Zone</h1>
+        <p id="date"> Update notes: Welcome to the updated home screen!</p>
         <hr class="invisible">
-        <a class="contentlink" href="dinoindex.html"> Simplified Dinosaur Game</a>
-        <a class="contentlink" href="platformerzip.zip"> My platformer game</a>
+        <h2>Check out the options below!</h2>
+        <hr>
+        <a class="contentlink" href="weeklyindex.html">  Visit Kellen Weekly! 📰 &#10145;&#65039;</a>
+        <hr class="invisible">
+        <a class="contentlink" href="https://discord.gg/KnJE9D9xJ4">  Join Servoria, our Discord server 💬 &#10145;&#65039;</a>
+        <hr class="invisible">
+        <a class="contentlink" href="https://discord.gg/HgbwvR4qpA"> Join the MineScape SMP, my Minecraft Server 🎮 &#10145;&#65039;</a>
     </body>
 </html>
