--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -23,6 +23,8 @@
         <hr class="invisible">
         <a class="contentlink" href="dinoindex.html"> Simplified Dinosaur Game 🦖 &#10145;&#65039;</a>
         <hr class="invisible">
+        <a class="contentlink" href="snake.html"> Snake Game (by Shaurya) &#10145;&#65039;</a>
+        <hr class="invisible">
         <a class="contentlink" href="https://www.roblox.com/groups/14732225/Js0n44-Studios#!/about"> Featured Roblox Creator</a>
         <hr class="invisible">
         <a class="contentlink" href="aboutme.html"> About Me!</a>
