--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
         <a class="contentlink" href="weeklyindex.html">  Visit Kellen Weekly! 📰 &#10145;&#65039;</a>
         <hr class="invisible">
         <a class="contentlink" href="https://discord.gg/HgbwvR4qpA"> Join the MineScape SMP, my Minecraft Server 🎮 &#10145;&#65039;</a>
+        <hr class="invisible">
+        <a class="contentlink" href="artem.html"> The Artem Zone &#10145;&#65039;</a>
     </body>
 </html>
