--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -25,6 +25,8 @@
         <hr class="invisible">
         <a class="contentlink" href="snake.html"> Snake Game (by Shaurya) &#10145;&#65039;</a>
         <hr class="invisible">
+        <a class="contentlink" href="flappybird.html"> Flappy Bird (by Shaurya) &#10145;&#65039;</a>
+        <hr class="invisible">
         <a class="contentlink" href="https://www.roblox.com/groups/14732225/Js0n44-Studios#!/about"> Featured Roblox Creator</a>
         <hr class="invisible">
         <a class="contentlink" href="aboutme.html"> About Me!</a>
