--- a/ThreeDemo/index.html
+++ b/ThreeDemo/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJ's CodeSpace</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>404</h1>
-    <h2>Page under development...</h2>
+    <script src="./JS/main.js" type="module"></script>
 </body>
 </html>
