--- a/flappybird.html
+++ b/flappybird.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="vieport", content="width=device-width, inital-scale=1.0">
         <title>Flappy Bird</title>
-        <link rel="stylesheet" href="/Users/kellenlorenz/Downloads/fb/flappybird.css">
-        <script src="/Users/kellenlorenz/Downloads/fb/flappybird.js"></script>
+        <link rel="stylesheet" href="flappybird.css">
+        <script src="flappybird.js"></script>
     </head>
     <body>
         <canvas id="board"></canvas>
