--- a/AJ/index.html
+++ b/AJ/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJ's CodeSpace</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>404</h1>
-    <h2>Page under development...</h2>
+    <header>
+        <h1 class="headerh">
+            AJ
+            <ol>
+                <li class="navi"><a href="./index.html">home</a></li>
+                <li class="navi"><a href="./Pages/projects.html">projects</a></li>
+                <li class="navi"><a href="./Pages/about.html">about</a></li>
+            </ol>
+        </h1>
+    </header>
+    <div class="container">
+        <br/>
+            <ol>
+                <li>
+                    <div class="profileBackground">
+                        <img src="./Assets/profile.jpeg" alt="profile" class="profile" />
+                    </div>
+                </li>
+                <li>
+                    <h2 class="quote">"Improving the web every day. Sometimes."<br/> - AJ</h2>
+                </li>
+            </ol>
+        <br/>
+        <main>
+
+        </main>
+    </div>
 </body>
 </html>
