Small updates to index

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <hr class="invisible">
         <h2>Check out the options below!</h2>
         <hr>
-        <a class="contentlink" href="weeklyindex.html">  Visit Kellen Weekly! 📰 &#10145;&#65039;</a>
+        <a class="contentlink" href="weeklyindex.html">  Kellen Weekly &#10145;&#65039;</a>
         <hr class="invisible">
-        <a class="contentlink" href="https://discord.gg/HgbwvR4qpA"> Join the MineScape SMP, my Minecraft Server 🎮 &#10145;&#65039;</a>
+        <a class="contentlink" href="games.html"> Community-Made Games &#10145;&#65039;</a>
         <hr class="invisible">
         <a class="contentlink" href="./AJ"> The Artem Zone &#10145;&#65039;</a>
     </body>
