Updated AJ's homepage

--- a/AJ/index.html
+++ b/AJ/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJ's CodeSpace</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/home.css">
 </head>
 <body>
     <header>
@@ -18,21 +19,10 @@
         </h1>
     </header>
     <div class="container">
-        <br/>
-            <ol>
-                <li>
-                    <div class="profileBackground">
-                        <img src="./Assets/profile.jpeg" alt="profile" class="profile" />
-                    </div>
-                </li>
-                <li>
-                    <h2 class="quote">"Improving the web every day. Sometimes."<br/> - AJ</h2>
-                </li>
-            </ol>
-        <br/>
+        <!-- <h2 class="quote">"Improving the web every day. Sometimes."<br/> - AJ</h2>
         <main>
 
-        </main>
+        </main> -->
     </div>
 </body>
 </html>
