Added quiz of the week, updated video of the week

--- a/correct1.html
+++ b/correct1.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <h1> Correct!</h1>
-        <h2>Who played the character of Harry Potter in the Harry Potter film series?</h2>
+        <h2>What is the rarest M&M color?</h2>
         <h1>
             <a href="question2.html">  Proceed! &#10145;&#65039;</a>
             </h1>
-        <p id="correct">Daniel Radcliffe</p>
-        <p id="incorrect">Rupert Grint</p>
-        <p id="incorrect">Tom Felton</p>
-        <p id="incorrect">Emma Watson</p>
+        <p id="incorrect">Blue</p>
+        <p id="incorrect">Red</p>
+        <p id="incorrect">Orange</p>
+        <p id="correct">Brown</p>
     </body>
 </html>
