--- a/correct2.html
+++ b/correct2.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <h1> Correct!</h1>
-        <h2>Which actor played the character of Tony Stark in the Marvel Cinematic Universe?</h2>
+        <h2>What was the first soft drink in space?</h2>
         <h1>
             <a href="question3.html">  Proceed! &#10145;&#65039;</a>
             </h1>
-        <p id="correct">Robert Downey Jr.</p>
-        <p id="incorrect">Chris Evans</p>
-        <p id="incorrect">Chris Hemsworth</p>
-        <p id="incorrect">Mark Ruffalo</p>
+        <p id="incorrect">Sprite</p>
+        <p id="incorrect">Pepsi</p>
+        <p id="correct">Coca Cola</p>
+        <p id="incorrect">Canada Dry</p>
     </body>
 </html>
