--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <img id="logo" src="logo.png">
         <h1>The Kellen Zone</h1>
-        <p id="date"> Notes: Check out the latest updates to Kellen Weekly!</p>
+        <p id="date"> Notes: New games page out now! DM me to submit your JS games!</p>
         <hr class="invisible">
         <h2>Check out the options below!</h2>
         <hr>
