--- a/wrong1.html
+++ b/wrong1.html
@@ -9,10 +9,10 @@
     <body>
         <h1> Incorrect!</h1>
         <a href="quizhome.html">  Start Over! &#10145;&#65039;</a>
-        <h2>Who played the character of Harry Potter in the Harry Potter film series?</h2>
-        <p id="correct">Daniel Radcliffe</p>
-        <p id="incorrect">Rupert Grint</p>
-        <p id="incorrect">Tom Felton</p>
-        <p id="incorrect">Emma Watson</p>
+        <h2>What is the rarest M&M color?</h2>
+        <p id="incorrect">Blue</p>
+        <p id="incorrect">Red</p>
+        <p id="incorrect">Orange</p>
+        <p id="correct">Brown</p>
     </body>
 </html>
