--- a/wrong3.html
+++ b/wrong3.html
@@ -9,10 +9,10 @@
     <body>
         <h1> Inorrect!</h1>
         <a href="quizhome.html">  Start Over! &#10145;&#65039;</a>
-        <h2>What is the best-selling video game of all time, as of 2023?</h2>
-        <p id="correct">Chris Martin</p>
-        <p id="incorrect">Jonny Buckland</p>
-        <p id="incorrect">Guy Berryman</p>
-        <p id="incorrect">Will Champion</p>
+        <h2>Which country consumes the most chocolate per capita?</h2>
+        <p id="incorrect">Austria</p>
+        <p id="incorrect">United States 🦅</p>
+        <p id="incorrect">Ireland</p>
+        <p id="correct">Switzerland</p>
     </body>
 </html>
