--- a/correct3.html
+++ b/correct3.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <h1> Correct!</h1>
-        <h2>Who is the lead singer of the band Coldplay?</h2>
+        <h2>Which country consumes the most chocolate per capita?</h2>
         <h1>
             <a href="weeklyindex.html">  Back to Home &#10145;&#65039;</a>
             </h1>
-        <p id="correct">Chris Martin</p>
-        <p id="incorrect">Jonny Buckland</p>
-        <p id="incorrect">Guy Berryman</p>
-        <p id="incorrect">Will Champion</p>
+        <p id="incorrect">Austria</p>
+        <p id="incorrect">United States 🦅</p>
+        <p id="incorrect">Ireland</p>
+        <p id="correct">Switzerland</p>
     </body>
 </html>
