--- a/question1.html
+++ b/question1.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <h1> Question One</h1>
-        <h2>Who played the character of Harry Potter in the Harry Potter film series?<h2>
-        <p> <a href="correct1.html"> &bull; Daniel Radcliffe</a> </p>
-        <p> <a href="wrong1.html"> &bull; Rupert Grint</a> </p>
-        <p> <a href="wrong1.html"> &bull; Tom Felton</a> </p>
-        <p> <a href="wrong1.html"> &bull; Emma Watson</a> </p>
+        <h2>What is the rarest M&M color?<h2>
+        <p> <a href="wrong1.html"> &bull; Blue</a> </p>
+        <p> <a href="wrong1.html"> &bull; Red</a> </p>
+        <p> <a href="wrong1.html"> &bull; Orange</a> </p>
+        <p> <a href="correct1.html"> &bull; Brown</a> </p>
     </body>
 </html>
