--- a/question3.html
+++ b/question3.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <h1> Question Three</h1>
-        <h2>Who is the lead singer of the band Coldplay?</h2>
-        <p> <a href="correct3.html"> &bull; Chris Martin </a> </p>
-        <p> <a href="wrong3.html"> &bull; Jonny Buckland</a> </p>
-        <p> <a href="wrong3.html"> &bull; Guy Berryman</a> </p>
-        <p> <a href="wrong3.html"> &bull; Will Champion</a> </p>
+        <h2>Which country consumes the most chocolate per capita?</h2>
+        <p> <a href="wrong3.html"> &bull; Austria</a> </p>
+        <p> <a href="wrong3.html"> &bull; United States 🦅</a> </p>
+        <p> <a href="wrong3.html"> &bull; Ireland</a> </p>
+        <p> <a href="correct3.html"> &bull; Switzerland</a> </p>
     </body>
 </html>
