--- a/quizhome.html
+++ b/quizhome.html
@@ -7,8 +7,8 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h2>Take an entertainment knowledge quiz!</h2>
-        <img src="quiz3img.jpg">
+        <h2>Take a food quiz!</h2>
+        <img src="quiz4img.jpg">
         <hr class = invisible>
         <a class="proceed" href="question1.html">  Proceed! &#10145;&#65039;</a>
     </body>
