--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -10,12 +10,12 @@
     <body>
         <img id="logo" src="logo.png">
         <h1>Kellen Weekly</h1>
-        <p id="date"> Updated 12-2-2023</p>
-        <p id="date"> Notes: Big changes to the site! Hope you enjoy!</p>
+        <p id="date"> Updated 12-9-2023</p>
+        <p id="date"> Notes: News article coming tomorrow, enjoy the video made by Srijan and the weekly quiz</p>
         <hr>
         <h2>Check out the videos, games, and more! Check back every Saturday for a refreshed catalog of content!</h2>
         <p>Video of the Week:</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/FU6r3BmlgBM?si=ETacYAMWEkZK9MGH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IYnPknd0Jrs?si=kz9frDke_zjQD3c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>
         <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
         <hr class="invisible">
