Added top bar (incomplete)

--- a/dinoindex.html
+++ b/dinoindex.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="dinostyle.css">
 </head>
 <body>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a class="active" href="weeklyindex.html">Weekly</a>
+        <a href="games.html">Games</a>
+        <a href="./AJ">The Artem Zone</a>
+      </div>
     <div id="game">
         <div id="character"></div>
         <div id="block"></div>
