--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <link rel="icon" href="logo.png" type="image/x-icon">
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
+        <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>The Kellen Zone</h1>
         <p id="date"> Notes: New games page out now! DM me to submit your JS games!</p>
