--- a/question1.html
+++ b/question1.html
@@ -7,6 +7,12 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
         <h1> Question One</h1>
         <h2>What is the rarest M&M color?<h2>
         <p> <a href="wrong1.html"> &bull; Blue</a> </p>
