--- a/quizhome.html
+++ b/quizhome.html
@@ -7,6 +7,12 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
         <h2>Take a food quiz!</h2>
         <img src="quiz4img.jpg">
         <hr class = invisible>
