--- a/snake.html
+++ b/snake.html
@@ -7,8 +7,13 @@
         <link rel="stylesheet" href="snake.css">
         <script src="javascript game 2"></script>
     </head>
-
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
         <h1>Snake</h1>
         <canvas id="board"></canvas>
     </body>
