--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -8,6 +8,13 @@
         <link rel="icon" href="logo.png" type="image/x-icon">
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
+        <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>Kellen Weekly</h1>
         <p id="date"> Updated 12-9-2023</p>
