--- a/correct3.html
+++ b/correct3.html
@@ -7,6 +7,12 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
         <h1> Correct!</h1>
         <h2>Which country consumes the most chocolate per capita?</h2>
         <h1>
