--- a/flappybird.html
+++ b/flappybird.html
@@ -8,6 +8,12 @@
         <script src="flappybird.js"></script>
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
         <canvas id="board"></canvas>
     </body>
 </html>
