--- a/games.html
+++ b/games.html
@@ -8,6 +8,13 @@
         <link rel="icon" href="logo.png" type="image/x-icon">
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a href="weeklyindex.html">Weekly</a>
+            <a class="active" href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+                </div>
+        <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>Games</h1>
         <p id="date"> Game update log:</p>
