--- a/news.html
+++ b/news.html
@@ -7,6 +7,12 @@
             <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a class="active" href="weeklyindex.html">Weekly</a>
+            <a href="games.html">Games</a>
+            <a href="./AJ">The Artem Zone</a>
+          </div>
         <img id="logo" src="logo.png">
         <h1>Weekly News </h1>
         <hr>
