Fixed navigation bar

--- a/flappybird.html
+++ b/flappybird.html
@@ -5,13 +5,16 @@
         <meta name="vieport", content="width=device-width, inital-scale=1.0">
         <title>Flappy Bird</title>
         <link rel="stylesheet" href="flappybird.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <script src="flappybird.js"></script>
     </head>
     <body>
         <div class="topnav">
             <a href="index.html">Home</a>
-            <a class="active" href="weeklyindex.html">Weekly</a>
-            <a href="games.html">Games</a>
+            <a href="weeklyindex.html">Weekly</a>
+            <a class="active" href="games.html">Games</a>
             <a href="./AJ">The Artem Zone</a>
           </div>
         <canvas id="board"></canvas>
