--- a/dinoindex.html
+++ b/dinoindex.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Kellens Runner</title>
     <link rel="stylesheet" href="dinostyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a class="active" href="weeklyindex.html">Weekly</a>
-        <a href="games.html">Games</a>
+        <a href="weeklyindex.html">Weekly</a>
+        <a class="active" href="games.html">Games</a>
         <a href="./AJ">The Artem Zone</a>
       </div>
     <div id="game">
