--- a/snake.html
+++ b/snake.html
@@ -5,16 +5,19 @@
         <meta name="viewport", content="width=device-width, inital-scale=1.0">
         <title>Snake</title>
         <link rel="stylesheet" href="snake.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <script src="javascript game 2"></script>
     </head>
     <body>
         <div class="topnav">
             <a href="index.html">Home</a>
-            <a class="active" href="weeklyindex.html">Weekly</a>
-            <a href="games.html">Games</a>
+            <a href="weeklyindex.html">Weekly</a>
+            <a class="active" href="games.html">Games</a>
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1>Snake</h1>
         <canvas id="board"></canvas>
     </body>
-</html> 
+</html>
