--- a/AJ/index.html
+++ b/AJ/index.html
@@ -9,20 +9,12 @@
 </head>
 <body>
     <header>
-        <h1 class="headerh">
-            AJ
-            <ol>
-                <li class="navi"><a href="./index.html">home</a></li>
-                <li class="navi"><a href="./Pages/projects.html">projects</a></li>
-                <li class="navi"><a href="./Pages/about.html">about</a></li>
-            </ol>
-        </h1>
+        <a href="./index.html" class="current">Home</a>
+        <a href="./Pages/projects.html">Projects</a>
+        <a href="./Pages/about.html">About</a>
     </header>
     <div class="container">
-        <!-- <h2 class="quote">"Improving the web every day. Sometimes."<br/> - AJ</h2>
-        <main>
 
-        </main> -->
     </div>
 </body>
 </html>
