Updated my homepage...

--- a/AJ/index.html
+++ b/AJ/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AJ's CodeSpace</title>
+    <title>Artem's CodeSpace</title>
     <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/home.css">
@@ -15,7 +15,13 @@
         <a href="./Pages/about.html">About</a>
     </header>
     <div class="container">
-
+        <img class="icon" alt="Web Icon" width="200" height="auto" src="./Assets/favicon.png" />
+        <div class="container-stuff">
+            <h3>Welcome to...</h3>
+            <h1>WEB INNOVATION AT ARTEM'S CODESPACE</h1>
+            <p>“There is a profound difference between interest and commitment. Interest reads a book; commitment applies the book 50 times.”
+                <br/>― M.J. DeMarco</p>
+        </div>
     </div>
 </body>
 </html>
