--- a/AJ/index.html
+++ b/AJ/index.html
@@ -19,8 +19,8 @@
         <div class="container-stuff">
             <h3>Welcome to...</h3>
             <h1>WEB INNOVATION AT ARTEM'S CODESPACE</h1>
-            <p>“There is a profound difference between interest and commitment. Interest reads a book; commitment applies the book 50 times.”
-                <br/>― M.J. DeMarco</p>
+            <!-- <p>“There is a profound difference between interest and commitment. Interest reads a book; commitment applies the book 50 times.”
+                <br/>― M.J. DeMarco</p> -->
         </div>
     </div>
 </body>
