--- a/games.html
+++ b/games.html
@@ -17,11 +17,9 @@
         <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>Games</h1>
-        <p id="date"> Game update log:</p>
-        <p>Added in Shaurya's new games! More to come soon!</p>
-        <hr class="invisible">
         <h2>Games catalog:</h2>
-        <hr>
+        <p id="date"> Updated 12-7-23</p>
+        <hr class="invisible">
         <a class="contentlink" href="dinoindex.html">Endless Runner</a>
         <hr class="invisible">
         <a class="contentlink" href="snake.html">Snake Game (by Shaurya)</a>
