--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -17,13 +17,10 @@
         <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>Kellen Weekly</h1>
-        <p id="date"> Updated 12-9-2023</p>
-        <p id="date"> Notes: News article coming tomorrow, enjoy the video made by Srijan and the weekly quiz</p>
-        <hr>
         <h2>Check out the videos, games, and more! Check back every Saturday for a refreshed catalog of content!</h2>
-        <p>Video of the Week:</p>
+        <p id="date"> Updated 12-9-2023</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IYnPknd0Jrs?si=kz9frDke_zjQD3c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <hr>
+        <hr class="invisible">
         <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
         <hr class="invisible">
         <a class="contentlink" href="news.html">  News of the Week 📰 &#10145;&#65039;</a>
