updated weekly news + video :)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>The Kellen Zone</h1>
-        <p id="date"> Notes: New games page out now! DM me to submit your JS games!</p>
+        <p id="date"> My bad guys its been a long break</p>
     </body>
 </html>
