--- a/news.html
+++ b/news.html
@@ -16,13 +16,18 @@
         <img id="logo" src="logo.png">
         <h1>Weekly News </h1>
         <hr>
-        <h2>Cybertruck Official Release!</h2>
-        <p class="article">Welcome back to the weekly news! This weeks story is on the Tesla Cybertruck, and how I think it will hold up on the market.</p>
+        <h2>Apple Vision Pro Release Date Announced!</h2>
+        <p class="article">Great (kind of) news! The Apple Vision Pro is officially releasing on November 2nd, and will be available for pre-order starting January 19th at 5AM (PT). The bad news: the price starts at a whopping $3,500.</p>
 
-        <p class="article">The Tesla Cybertruck was announced in November of 2019, with the memorable smashing of two windows which were said to be indestructible. The vehicle itself is almost completely made of stainless steel alloy which Tesla designed themselves, which brings up a point of concern, because as many have noticed, it might not be completely flush, meaning there might be pieces sticking out too much. Technology YouTuber Marques Brownlee, also known as MKBHD, has noted that stainless steel was positioned slightly differently on several vehicles, some being nearly flush and others being quite worse. In addition to this, the front hood space is quite small, it only has enough space for two small carry-ons. Compared to other EVs like the Rivian R1T, this is a disappointment.</p>
+        <p class="article">The Apple Vision Pro, for those who dont already know, is an AR headset (meaning you can see your surroundings) which will be compatible for most apps you might be familiar with using on a Mac or iPhone. Examples of use-cases for the Apple Vision Pro are watching movies in an immersive environment (or in the same environment, but with a giant, or tiny, screen in front of you), getting work done with productivity apps such as FaceTime, notes, safari, mail (you name it!), or even taking photos and videos with the high-resolution cameras (capable of taking and viewing spatial videos, which can also be taken on the iPhone 15 Pro).
+        </p>
         
-        <p class="article">Moving away from the negatives, lets look at the positives of the Tesla Cybertruck. It is available in three options: a rear-wheel drive option (0-60 6.5 sec, 250 mi range), an all-wheel drive option (340 mi range, 0-60 4.1 sec), and the “Cyberbeast” option (320 mi range, 0-60 in just 2.6 sec). It has a quite large bed and a powered tonneau cover, which can hold up to 300 pounds (this has been confirmed by MKBHD). If you are driving the truck and the cover is up, you will not get any rear visibility. Instead, you have to refer to the 18.5-inch touchscreen beside the steering wheel. The rearview mirror is not digital, so you cannot refer to that either. The Cybertruck can handle most tasks you throw at it, such as shooting it with a gun, drag racing a Porsche 911 while towing a 911, or even out-towing other trucks with a 35,000-pound attachment on the back.</p>
+        <p class="article">The headset features eye tracking, spatial audio, a screen with 23 million pixels, and a battery life of 2 hours with general use, or 2.5 hours of watching video (ouch).
+        </p>
         
+        <p class="article">Apple just recently released a video teasing the release of the Apple Vision Pro, featuring a similar style to the original iPhone “Hello” video. Could this signal the future of computing? When thinking about phones before and after the iPhone, or computers after the Mac was released, the Apple Vision Pro could cause yet another major impact to the tech industry.
+        </p>
+
         <p>If you would like an article published about YOU or if you have any ideas for me for next week, submit them here!</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVXsXQkKmyUrjmZAmHWjarFWdH2t9jzGvnV46g2k4LMYvleQ/viewform" 
         width="550" height="600" 
