--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -17,9 +17,9 @@
         <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>Kellen Weekly</h1>
-        <h2>Check out the videos, games, and more! Check back every Saturday for a refreshed catalog of content!</h2>
-        <p id="date"> Updated 12-9-2023</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/IYnPknd0Jrs?si=kz9frDke_zjQD3c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>Check out the videos, games, and more!</h2>
+        <p id="date"> Updated 1-10-2024?! </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/aqTIB_q40bo?si=5oBqNvLtb-oWPuZf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr class="invisible">
         <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
         <hr class="invisible">
@@ -27,6 +27,6 @@
         <hr class="invisible">
         <a class="contentlink" href="https://www.roblox.com/groups/14732225/Js0n44-Studios#!/about"> Featured Roblox Creator</a>
         <hr class="invisible">
-        <a class="contentlink" href="aboutme.html"> About Me!</a>
+        <a class="contentlink" href="aboutme.html"> About Me</a>
     </body>
 </html>
