new update - tweaks + story competition
- introduced story comp
- added github to about me
- edited index

--- a/aboutme.html
+++ b/aboutme.html
@@ -25,6 +25,8 @@
         <p class="article">
             Thanks for joining me on this journey of learning and fun, and I hope to see you again!
         </p>
+        <hr>
+        <a class="contentlink" href="https://github.com/randomcoderguyinabasement"> My Github</a>
         </body> 
         </html> 
     </body>
