--- a/correct3.html
+++ b/correct3.html
@@ -14,13 +14,13 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Correct!</h1>
-        <h2>Which country consumes the most chocolate per capita?</h2>
+        <h2>What is the highest score possible in a single frame of bowling?</h2>
         <h1>
             <a href="weeklyindex.html">  Back to Home &#10145;&#65039;</a>
             </h1>
-        <p id="incorrect">Austria</p>
-        <p id="incorrect">United States 🦅</p>
-        <p id="incorrect">Ireland</p>
-        <p id="correct">Switzerland</p>
+        <p id="correct">30</p>
+        <p id="incorrect">100</p>
+        <p id="incorrect">300</p>
+        <p id="incorrect">10</p>
     </body>
 </html>
