--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Weekly News</title>
+        <title>Story Competition</title>
         <link href="newstyle.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,21 +14,12 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <img id="logo" src="logo.png">
-        <h1>Weekly News </h1>
+        <h1>Story Competition</h1>
         <hr>
-        <h2>Apple Vision Pro Release Date Announced!</h2>
-        <p class="article">Great (kind of) news! The Apple Vision Pro is officially releasing on November 2nd, and will be available for pre-order starting January 19th at 5AM (PT). The bad news: the price starts at a whopping $3,500.</p>
+        <h2>Get your creative writing featured on the website!</h2>
+        <p class="article">Submit your short story for a chance for it to be put on the website for everyone to see. To enter, send your story to kellenlorenz62@gmail.com. Final results will likely be posted in one week from the website's last update.</p>
 
-        <p class="article">The Apple Vision Pro, for those who dont already know, is an AR headset (meaning you can see your surroundings) which will be compatible for most apps you might be familiar with using on a Mac or iPhone. Examples of use-cases for the Apple Vision Pro are watching movies in an immersive environment (or in the same environment, but with a giant, or tiny, screen in front of you), getting work done with productivity apps such as FaceTime, notes, safari, mail (you name it!), or even taking photos and videos with the high-resolution cameras (capable of taking and viewing spatial videos, which can also be taken on the iPhone 15 Pro).
-        </p>
-        
-        <p class="article">The headset features eye tracking, spatial audio, a screen with 23 million pixels, and a battery life of 2 hours with general use, or 2.5 hours of watching video (ouch).
-        </p>
-        
-        <p class="article">Apple just recently released a video teasing the release of the Apple Vision Pro, featuring a similar style to the original iPhone “Hello” video. Could this signal the future of computing? When thinking about phones before and after the iPhone, or computers after the Mac was released, the Apple Vision Pro could cause yet another major impact to the tech industry.
-        </p>
-
-        <p>If you would like an article published about YOU or if you have any ideas for me for next week, submit them here!</p>
+        <p>If you would like an article published about YOU or if you have any ideas for me, submit them here! Do not submit your story here please!</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVXsXQkKmyUrjmZAmHWjarFWdH2t9jzGvnV46g2k4LMYvleQ/viewform" 
         width="550" height="600" 
         frameborder="0" marginheight="0"
