--- a/question2.html
+++ b/question2.html
@@ -14,10 +14,10 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Question Two</h1>
-        <h2>What was the first soft drink in space?<h2>
-        <p> <a href="wrong2.html"> &bull; Sprite</a> </p>
-        <p> <a href="wrong2.html"> &bull; Pepsi</a> </p>
-        <p> <a href="correct2.html"> &bull; Coca Cola</a> </p>
-        <p> <a href="wrong2.html"> &bull; Canada Dry</a> </p>
+        <h2>Who is known as “The Flying Fish” in the world of swimming?<h2>
+        <p> <a href="wrong2.html"> &bull; Ryan Lochte</a> </p>
+        <p> <a href="wrong2.html"> &bull; Caeleb Dressel</a> </p>
+        <p> <a href="correct2.html"> &bull; Michael Phelps</a> </p>
+        <p> <a href="wrong2.html"> &bull; Mark Spitz</a> </p>
     </body>
 </html>
