--- a/question3.html
+++ b/question3.html
@@ -14,10 +14,10 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Question Three</h1>
-        <h2>Which country consumes the most chocolate per capita?</h2>
-        <p> <a href="wrong3.html"> &bull; Austria</a> </p>
-        <p> <a href="wrong3.html"> &bull; United States 🦅</a> </p>
-        <p> <a href="wrong3.html"> &bull; Ireland</a> </p>
-        <p> <a href="correct3.html"> &bull; Switzerland</a> </p>
+        <h2>What is the highest score possible in a single frame of bowling?</h2>
+        <p> <a href="correct3.html"> &bull; 30</a> </p>
+        <p> <a href="wrong3.html"> &bull; 100</a> </p>
+        <p> <a href="wrong3.html"> &bull; 300</a> </p>
+        <p> <a href="wrong3.html"> &bull; 10</a> </p>
     </body>
 </html>
