--- a/wrong1.html
+++ b/wrong1.html
@@ -15,10 +15,10 @@
           </div>
         <h1> Incorrect!</h1>
         <a href="quizhome.html">  Start Over! &#10145;&#65039;</a>
-        <h2>What is the rarest M&M color?</h2>
-        <p id="incorrect">Blue</p>
-        <p id="incorrect">Red</p>
-        <p id="incorrect">Orange</p>
-        <p id="correct">Brown</p>
+        <h2>Which country won the FIFA World Cup in 2018?</h2>
+        <p id="incorrect">Brazil</p>
+        <p id="incorrect">Germany</p>
+        <p id="correct">France</p>
+        <p id="incorrect">Argentina</p>
     </body>
 </html>
