--- a/wrong3.html
+++ b/wrong3.html
@@ -15,10 +15,10 @@
           </div>
         <h1> Inorrect!</h1>
         <a href="quizhome.html">  Start Over! &#10145;&#65039;</a>
-        <h2>Which country consumes the most chocolate per capita?</h2>
-        <p id="incorrect">Austria</p>
-        <p id="incorrect">United States 🦅</p>
-        <p id="incorrect">Ireland</p>
-        <p id="correct">Switzerland</p>
+        <h2> What is the highest score possible in a single frame of bowling?</h2>
+        <p id="correct">30</p>
+        <p id="incorrect">100</p>
+        <p id="incorrect">300</p>
+        <p id="incorrect">10</p>
     </body>
 </html>
