--- a/correct1.html
+++ b/correct1.html
@@ -14,13 +14,13 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Correct!</h1>
-        <h2>What is the rarest M&M color?</h2>
+        <h2>Which country won the FIFA world cup in 2018?</h2>
         <h1>
             <a href="question2.html">  Proceed! &#10145;&#65039;</a>
             </h1>
-        <p id="incorrect">Blue</p>
-        <p id="incorrect">Red</p>
-        <p id="incorrect">Orange</p>
-        <p id="correct">Brown</p>
+        <p id="incorrect">Brazil</p>
+        <p id="incorrect">Germany</p>
+        <p id="correct">France</p>
+        <p id="incorrect">Argentina</p>
     </body>
 </html>
