--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>The Kellen Zone</h1>
-        <p id="date"> My bad guys its been a long break</p>
+        <h2>Weekly Updates, Games, and More</h2>
+        <hr class="invisible">
+        <a href="news.html"><img src="scomp.png"></a>
     </body>
 </html>
