--- a/question1.html
+++ b/question1.html
@@ -14,10 +14,10 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Question One</h1>
-        <h2>What is the rarest M&M color?<h2>
-        <p> <a href="wrong1.html"> &bull; Blue</a> </p>
-        <p> <a href="wrong1.html"> &bull; Red</a> </p>
-        <p> <a href="wrong1.html"> &bull; Orange</a> </p>
-        <p> <a href="correct1.html"> &bull; Brown</a> </p>
+        <h2>Which country won the FIFA World Cup in 2018?<h2>
+        <p> <a href="wrong1.html"> &bull; Brazil</a> </p>
+        <p> <a href="wrong1.html"> &bull; Germany</a> </p>
+        <p> <a href="correct1.html"> &bull; France</a> </p>
+        <p> <a href="wrong1.html"> &bull; Argentina</a> </p>
     </body>
 </html>
