--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -18,14 +18,12 @@
         <img id="logo" src="logo.png">
         <h1>Kellen Weekly</h1>
         <h2>Check out the videos, games, and more!</h2>
-        <p id="date"> Updated 1-10-2024?! </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/aqTIB_q40bo?si=5oBqNvLtb-oWPuZf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p id="date"> Updated 3-30-24</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qa_MVEYxJXs?si=mreVRDFl4znpZ7h-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <hr class="invisible">
         <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
         <hr class="invisible">
-        <a class="contentlink" href="news.html">  News of the Week 📰 &#10145;&#65039;</a>
-        <hr class="invisible">
-        <a class="contentlink" href="https://www.roblox.com/groups/14732225/Js0n44-Studios#!/about"> Featured Roblox Creator</a>
+        <a class="contentlink" href="news.html">  Story Competition 📖 &#10145;&#65039;</a>
         <hr class="invisible">
         <a class="contentlink" href="aboutme.html"> About Me</a>
     </body>
