Added retro games

--- a/retrogames.html
+++ b/retrogames.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Games</title>
+        <title>Unblocked Retro Games</title>
         <link href="style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,16 +16,10 @@
                 </div>
         <hr class="invisible">
         <img id="logo" src="logo.png">
-        <h1>Games</h1>
-        <h2>Games catalog:</h2>
-        <p id="date"> Updated 10-23-24</p>
+        <h1>Retro Games</h1>
+        <h2>Enjoy these games, provided by retrogames.cc</h2>
+        <p id="date"> Updated 12-7-23</p>
         <hr class="invisible">
-        <a class="contentlink" href="dinoindex.html">Endless Runner</a>
-        <hr class="invisible">
-        <a class="contentlink" href="snake.html">Snake Game (by Shaurya)</a>
-        <hr class="invisible">
-        <a class="contentlink" href="flappybird.html">Flappy Bird (by Shaurya)</a>
-        <hr class="invisible">
-        <a class="contentlink" href="retrogames.html">Unblocked Retro Games</a>
+        <iframe src="https://www.retrogames.cc/embed/32117-super-smash-bros-usa.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
     </body>
 </html>
