Retro games site polish

--- a/retrogames.html
+++ b/retrogames.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Unblocked Retro Games</title>
+        <title>Retro Games</title>
         <link href="style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,6 @@
         <img id="logo" src="logo.png">
         <h1>Retro Games</h1>
         <h2>Enjoy these games, provided by retrogames.cc</h2>
-        <p id="date"> Updated 12-7-23</p>
         <hr class="invisible">
         <iframe src="https://www.retrogames.cc/embed/32117-super-smash-bros-usa.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
     </body>
