--- a/retrogames.html
+++ b/retrogames.html
@@ -17,7 +17,7 @@
         <hr class="invisible">
         <img id="logo" src="logo.png">
         <h1>Retro Games</h1>
-        <h2>Enjoy these games, provided by retrogames.cc</h2>
+        <h2>Regularly Updated Catalog of Retro Games</h2>
         <hr class="invisible">
         <iframe src="https://www.retrogames.cc/embed/32117-super-smash-bros-usa.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
     </body>
