--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Story Competition</title>
+        <title>Weekly News</title>
         <link href="newstyle.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +14,17 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <img id="logo" src="logo.png">
-        <h1>Story Competition</h1>
+        <h1>Weekly News</h1>
         <hr>
-        <h2>Get your creative writing featured on the website!</h2>
-        <p class="article">Submit your short story for a chance for it to be put on the website for everyone to see. To enter, send your story to kellenlorenz62@gmail.com. Final results will likely be posted in one week from the website's last update.</p>
+        <h2>Apple Upcoming Plans for M4 Processor</h2>
+        <p class="article">Apple plans to release MBAs with M4 chips in early 2025, according to Bloomberg.</p>
+        <p class="article">Just this spring the M3 chips were announced, but the M4 will most likely launch between January and March 2025.</p>
+        <p class="article">Both the 13 and 15-inch models will get the M4 chip along with a similar design to the M2 Air.</p>
+        <p class="article">This means that the MBA line will likely not be part of the rumored announcement next week, but they will update Macbook Pros, Mac Minis, and iMacs.</p>
+        <p class="article">Since the Mac Studio is currently using the M2 Max/Ultra, the M4 release could arrive after a March software release, meaning sometime between March and June. Apple is also working on an M4 Mac Pro, but no timeline was provided.</p>
+        <p class="article">In the spring, Apple is rumored to reveal a new iPhone SE, iPad Airs, upgraded iPad keyboards, and new entry level iPads. They also just release a seventh-gen iPad Mini, set to launch with the first phase of Apple Intelligence next week.</p>
 
-        <p>If you would like an article published about YOU or if you have any ideas for me, submit them here! Do not submit your story here please!</p>
+        <p>If you would like an article published about YOU or if you have any ideas for me, submit them here!</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVXsXQkKmyUrjmZAmHWjarFWdH2t9jzGvnV46g2k4LMYvleQ/viewform" 
         width="550" height="600" 
         frameborder="0" marginheight="0"
